# CPP-StringExtract

./: CMakeLists.txt  README.md  setup.sh
include/: StringExtract.hpp
src/: StringExtract.cpp
tests/: tests.cpp
